--- a/HS2_Heelz/HS2_Heelz.csproj
+++ b/HS2_Heelz/HS2_Heelz.csproj
@@ -99,6 +99,7 @@
   <PropertyGroup>
     <PostBuildEvent>
       copy /Y "$(TargetDir)$(ProjectName).dll" "D:\suqa\BepInEx\plugins\$(ProjectName).dll"
+      copy /Y "$(TargetDir)$(ProjectName).dll" "D:\Plugin Release Repository\Heelz\$(ProjectName).dll"
     </PostBuildEvent>
   </PropertyGroup>
 </Project>
