--- a/AI_Heelz/AI_Heelz.csproj
+++ b/AI_Heelz/AI_Heelz.csproj
@@ -114,6 +114,7 @@
   <PropertyGroup>
     <PostBuildEvent>
       copy /Y "$(TargetDir)$(ProjectName).dll" "D:\AI-Syoujyo\BepInEx\plugins\$(ProjectName).dll"
+      copy /Y "$(TargetDir)$(ProjectName).dll" "D:\Plugin Release Repository\Heelz\$(ProjectName).dll"
     </PostBuildEvent>
   </PropertyGroup>
 </Project>
