--- a/nuget.config
+++ b/nuget.config
@@ -6,5 +6,6 @@
     </packageRestore>
     <packageSources>
         <add key="IllusionMods" value="https://pkgs.dev.azure.com/IllusionMods/Nuget/_packaging/IllusionMods/nuget/v3/index.json" />
+        <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     </packageSources>
 </configuration>
