--- a/AI_Heelz/AI_Heelz.csproj
+++ b/AI_Heelz/AI_Heelz.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -12,7 +12,7 @@
         <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <Deterministic>true</Deterministic>
-        <TargetFrameworkProfile/>
+        <TargetFrameworkProfile />
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>hooh_AIHeelz.snk</AssemblyOriginatorKeyFile>
         <PublicSign>true</PublicSign>
@@ -36,30 +36,31 @@
         <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Xml"/>
-        <PackageReference Include="IllusionLibs.AIGirl.Assembly-CSharp" Version="2020.5.29"/>
-        <PackageReference Include="IllusionLibs.AIGirl.Assembly-CSharp-firstpass" Version="2020.5.29"/>
-        <PackageReference Include="IllusionLibs.AIGirl.UnityEngine.CoreModule" Version="2018.2.21.1"/>
-        <PackageReference Include="IllusionLibs.BepInEx" Version="5.3.0.0"/>
-        <PackageReference Include="IllusionLibs.BepInEx.Harmony" Version="2.0.6.0"/>
-        <PackageReference Include="IllusionModdingAPI.AIAPI" Version="1.13.4"/>
-        <PackageReference Include="XUnity.Common" Version="1.0.0"/>
-        <PackageReference Include="XUnity.ResourceRedirector" Version="1.1.0"/>
-        <PackageReference Include="Sideloader.AIGirl" Version="16.0.0"/>
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Xml" />
+        <PackageReference Include="IllusionLibs.AIGirl.Assembly-CSharp" Version="2020.5.29" />
+        <PackageReference Include="IllusionLibs.AIGirl.Assembly-CSharp-firstpass" Version="2020.5.29" />
+        <PackageReference Include="IllusionLibs.AIGirl.UnityEngine.AnimationModule" Version="2018.2.21.3" />
+        <PackageReference Include="IllusionLibs.AIGirl.UnityEngine.CoreModule" Version="2018.2.21.1" />
+        <PackageReference Include="IllusionLibs.BepInEx" Version="5.3.0.0" />
+        <PackageReference Include="IllusionLibs.BepInEx.Harmony" Version="2.0.6.0" />
+        <PackageReference Include="IllusionModdingAPI.AIAPI" Version="1.13.4" />
+        <PackageReference Include="XUnity.Common" Version="1.0.0" />
+        <PackageReference Include="XUnity.ResourceRedirector" Version="1.1.0" />
+        <PackageReference Include="Sideloader.AIGirl" Version="16.0.0" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Plugin.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Plugin.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="hooh_AIHeelz.snk"/>
-        <None Include="packages.config"/>
+        <None Include="hooh_AIHeelz.snk" />
+        <None Include="packages.config" />
     </ItemGroup>
-    <Import Project="..\IL_Heelz\IL_Heelz.projitems" Label="Shared"/>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+    <Import Project="..\IL_Heelz\IL_Heelz.projitems" Label="Shared" />
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <PropertyGroup>
         <PreBuildEvent>
         </PreBuildEvent>
