--- a/HS2_Heelz/HS2_Heelz.csproj
+++ b/HS2_Heelz/HS2_Heelz.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -34,29 +34,30 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="Plugin.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Plugin.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="hooh_HS2Heelz.snk"/>
-        <None Include="packages.config"/>
+        <None Include="hooh_HS2Heelz.snk" />
+        <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
-        <Reference Include="System"/>
-        <Reference Include="System.Xml"/>
-        <Reference Include="System.Xml.Linq"/>
-        <PackageReference Include="IllusionLibs.HoneySelect2.Assembly-CSharp" Version="2020.5.29"/>
-        <PackageReference Include="IllusionLibs.HoneySelect2.Assembly-CSharp-firstpass" Version="2020.5.29"/>
-        <PackageReference Include="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" Version="2018.4.11"/>
-        <PackageReference Include="IllusionLibs.BepInEx" Version="5.3.0.0"/>
-        <PackageReference Include="IllusionLibs.BepInEx.Harmony" Version="2.0.6.0"/>
-        <PackageReference Include="IllusionModdingAPI.HS2API" Version="1.13.4"/>
-        <PackageReference Include="XUnity.Common" Version="1.0.0"/>
-        <PackageReference Include="XUnity.ResourceRedirector" Version="1.1.0"/>
-        <PackageReference Include="Sideloader.HoneySelect2" Version="16.0.0"/>
+        <Reference Include="System" />
+        <Reference Include="System.Xml" />
+        <Reference Include="System.Xml.Linq" />
+        <PackageReference Include="IllusionLibs.HoneySelect2.Assembly-CSharp" Version="2020.5.29" />
+        <PackageReference Include="IllusionLibs.HoneySelect2.Assembly-CSharp-firstpass" Version="2020.5.29" />
+        <PackageReference Include="IllusionLibs.HoneySelect2.UnityEngine.AnimationModule" Version="2018.4.11.2" />
+        <PackageReference Include="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" Version="2018.4.11" />
+        <PackageReference Include="IllusionLibs.BepInEx" Version="5.3.0.0" />
+        <PackageReference Include="IllusionLibs.BepInEx.Harmony" Version="2.0.6.0" />
+        <PackageReference Include="IllusionModdingAPI.HS2API" Version="1.13.4" />
+        <PackageReference Include="XUnity.Common" Version="1.0.0" />
+        <PackageReference Include="XUnity.ResourceRedirector" Version="1.1.0" />
+        <PackageReference Include="Sideloader.HoneySelect2" Version="16.0.0" />
     </ItemGroup>
-    <Import Project="..\IL_Heelz\IL_Heelz.projitems" Label="Shared"/>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+    <Import Project="..\IL_Heelz\IL_Heelz.projitems" Label="Shared" />
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <PropertyGroup>
         <PostBuildEvent>
             mkdir "$(TargetDir)final"
