--- a/AI_Heelz/packages.config
+++ b/AI_Heelz/packages.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExtensibleSaveFormat.AIGirl" version="16.0.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.Assembly-CSharp-firstpass" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.Sirenix.Serialization" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.AIModule" version="2018.2.21.1" targetFramework="net472" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.AnimationModule" version="2018.2.21.1" targetFramework="net472" developmentDependency="true" />
-  <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.1" targetFramework="net472" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.3.0" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.6" targetFramework="net46" developmentDependency="true" />
-  <package id="IllusionModdingAPI.AIAPI" version="1.13.4" targetFramework="net46" developmentDependency="true" />
-  <package id="SharpZipLib" version="1.3.0" targetFramework="net46" />
-  <package id="Sideloader.AIGirl" version="16.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="BepInEx.ConfigurationManager" version="16.4.0" targetFramework="net48" developmentDependency="true" />
+  <package id="ExtensibleSaveFormat.AIGirl" version="18.2.0" targetFramework="net48" developmentDependency="true" />
+  <package id="IllusionLibs.AIGirl.Assembly-CSharp" version="2020.5.29.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.Assembly-CSharp-firstpass" version="2020.5.29.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.Sirenix.Serialization" version="2020.5.29.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.UniRx" version="2020.5.29.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.AnimationModule" version="2018.2.21.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.CoreModule" version="2018.2.21.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.IMGUIModule" version="2018.2.21.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.UI" version="2018.2.21.4" targetFramework="net48" />
+  <package id="IllusionLibs.AIGirl.UnityEngine.UIModule" version="2018.2.21.4" targetFramework="net48" />
+  <package id="IllusionLibs.BepInEx" version="5.4.19" targetFramework="net48" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.9.0" targetFramework="net48" />
+  <package id="IllusionModdingAPI.AIAPI" version="1.32.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Sideloader.AIGirl" version="18.2.0" targetFramework="net48" developmentDependency="true" />
 </packages>
