--- a/AI_Heelz/AI_Heelz.csproj
+++ b/AI_Heelz/AI_Heelz.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="abdata\list\heels\heels.unity3d" />
     <None Include="hooh_AIHeelz.snk" />
     <None Include="packages.config" />
   </ItemGroup>
